staginfra-auth-1: Adding user auth...still broken test classes